# src/controllers/bouquetsControllers.js
@@ -1,6 +1,8 @@
 import * as bouquetsServices from "../services/bouquetsServices.js";
 import HttpError from "../helpers/HttpError.js";
-
+import fs from "fs/promises";
+import path from "path";
+import { nanoid } from "nanoid";
 export const getAllBouquets = async (req, res, next) => {
   try {
     const bouquets = await bouquetsServices.listBouquets();
@@ -67,6 +69,35 @@ export const updateFavorite = async (req, res, next) => {
   try {
     const bouquet = await bouquetsServices.updateBouquet(req.params.id, {
       favorite: req.body.favorite,
+    });
+
+    if (!bouquet) {
+      throw HttpError(404, "Not found");
+    }
+
+    res.status(200).json(bouquet);
+  } catch (error) {
+    next(error);
+  }
+};
+export const updatePhoto = async (req, res, next) => {
+  try {
+    if (!req.file) {
+      throw HttpError(400, "Photo is required");
+    }
+
+    const { path: tempPath, originalname } = req.file;
+    const extension = path.extname(originalname);
+    const filename = `${nanoid()}${extension}`;
+    const photosDir = path.resolve("public", "photos");
+    const resultPath = path.join(photosDir, filename);
+
+    await fs.rename(tempPath, resultPath);
+
+    const photoURL = `/photos/${filename}`;
+
+    const bouquet = await bouquetsServices.updateBouquet(req.params.id, {
+      photoURL,
     });
 
     if (!bouquet) {
